@@ -2,12 +2,10 @@ package leetcode;
 
 import static org.junit.Assert.assertEquals;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 import org.junit.Test;
-
-import com.google.common.collect.Lists;
 
 public class PascalsTriangleII {
   /*
@@ -18,14 +16,14 @@ public class PascalsTriangleII {
   */
 
   public List<Integer> getRow(int k) {
-    List<Integer> res = Lists.newArrayList(1);
+    List<Integer> res = new ArrayList<>(List.of(1));
     for (int j = 1; j <= k; j++)
-      res.add(res.get(res.size() - 1) * (k - j + 1) / j);
+      res.add(res.getLast() * (k - j + 1) / j);
     return res;
   }
 
   @Test
   public void test() {
-    assertEquals(Arrays.asList(1, 3, 3, 1), getRow(3));
+    assertEquals(List.of(1, 3, 3, 1), getRow(3));
   }
 }
